Sending email to the department

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; database=dotnet-5-crud-api; Uid=root; Pwd=F6l12a1s17h8_;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -14,6 +11,7 @@
     "Port": 587,
     "SenderName": "DIT I.T. support",
     "SenderEmail": "ziyaevwork@gmail.com",
+    "RecipientEmail": "ziyaevaba@gmail.com",
     "Username": "ziyaevwork@gmail.com",
     "Password": "ozgk gqut yops eyjp"
   }
