--- a/appsettings.json
+++ b/appsettings.json
@@ -1,18 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "SmtpSettings": {
+        "Server": "172.16.55.75",
+        "Port": 25,
+        "SenderName": "DIT I.T. support",
+        "SenderEmail": "site@ecotaxi.tj",
+        "RecipientEmail": "sanginov.sorbon01@gmail.com",
+        "Username": "site@ecotaxi.tj",
+        "Password": "S!te2024"
     }
-  },
-  "AllowedHosts": "*",
-  "SmtpSettings": {
-    "Server": "smtp.gmail.com",
-    "Port": 587,
-    "SenderName": "DIT I.T. support",
-    "SenderEmail": "ziyaevwork@gmail.com",
-    "RecipientEmail": "ziyaevaba@gmail.com",
-    "Username": "ziyaevwork@gmail.com",
-    "Password": "ozgk gqut yops eyjp"
-  }
 }
