Changed replacement for education

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
         "Port": 25,
         "SenderName": "DIT I.T. support",
         "SenderEmail": "site@ecotaxi.tj",
-        "RecipientEmail": "sanginov.sorbon01@gmail.com",
+        "RecipientEmail": "ziyaevwork@gmail.com",
         "Username": "site@ecotaxi.tj",
         "Password": "S!te2024"
     }
