--- a/appsettings.json
+++ b/appsettings.json
@@ -10,9 +10,9 @@
         "Server": "172.16.55.75",
         "Port": 25,
         "SenderName": "DIT I.T. support",
-        "SenderEmail": "site@ecotaxi.tj",
-        "RecipientEmail": "ziyaevwork@gmail.com",
-        "Username": "site@ecotaxi.tj",
-        "Password": "S!te2024"
+        "SenderEmail": "sender@gmail.com,
+        "RecipientEmail": "recipient@gmail.com",
+        "Username": "username@gmail.com",
+        "Password": "Password"
     }
 }
