--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
         "Server": "172.16.55.75",
         "Port": 25,
         "SenderName": "DIT I.T. support",
-        "SenderEmail": "sender@gmail.com,
+        "SenderEmail": "sender@gmail.com",
         "RecipientEmail": "recipient@gmail.com",
         "Username": "username@gmail.com",
         "Password": "Password"
